Started to modularize the app
git-svn-id: https://openwms2005.svn.sourceforge.net/svnroot/openwms2005@773 fda5f131-174c-0410-8613-e0905860106b

--- a/org.openwms/trunk/source/org.openwms.client.flex.app/src/main/flex/org/openwms/web/flex/client/view/StartScreen.mxml
+++ b/org.openwms/trunk/source/org.openwms.client.flex.app/src/main/flex/org/openwms/web/flex/client/view/StartScreen.mxml
@@ -26,62 +26,25 @@
 	backgroundGradientAlphas="[1.0, 1.0]" backgroundGradientColors="[#FFFFFF, #FFFFFF]" creationComplete="init()">
 
 	<!-- Styles -->
-	<mx:Style source="/css/main.css" />
+	<mx:Style source="assets/css/main.css" />
 	<mx:Style source="assets/css/styles.css" />
 	
 	<!-- Scripts -->
-	<mx:Script>
-		<![CDATA[
-			import mx.events.ModuleEvent;
-            import mx.events.MenuEvent;
-			import mx.modules.IModuleInfo;
-			import mx.modules.ModuleManager;
-            import mx.managers.PopUpManager;
-            import mx.managers.DragManager;
-            import mx.messaging.channels.AMFChannel;
-            import mx.messaging.ChannelSet;
-            import mx.rpc.events.ResultEvent;
-            import mx.collections.ArrayCollection;
-            import mx.collections.XMLListCollection;
-			import mx.controls.Alert;
-            import flash.events.Event;
+	<mx:Script source="Runner.as" />
 
-            import org.openwms.web.flex.client.IApplicationModule;
-			import org.openwms.web.flex.client.model.ModelLocator;
-            import org.openwms.web.flex.client.control.MainController;
-            import org.openwms.web.flex.client.service.ModuleLocator;
-			import org.openwms.web.flex.client.event.SwitchScreenEvent;
-			import org.openwms.web.flex.client.event.ApplicationEvent;
-           // import org.openwms.web.flex.client.event.LocationEvent;
-            //import org.openwms.web.flex.client.event.LoadLocationGroupsEvent;
-            import org.openwms.web.flex.client.event.ModulesEvent;
-            import org.openwms.web.flex.client.event.UserEvent;
-            import org.openwms.web.flex.client.event.EventBroker;
-            import org.openwms.web.flex.client.command.*;
-			import org.openwms.common.domain.Module;
-			import org.openwms.common.domain.MenuItem;
-			import org.openwms.web.flex.client.HashMap;
+	<!-- Services -->
+	<business:Services />
 
-            import org.granite.rpc.remoting.mxml.SecureRemoteObject;
-            import org.granite.events.SecurityEvent;
-
-			[Bindable]
-			private var modelLocator:ModelLocator = ModelLocator.getInstance();
-            [Bindable]
-            private var moduleLocator:ModuleLocator = ModuleLocator.getInstance();
-            [Bindable]
-            private var broker:EventBroker = EventBroker.getInstance();
-			[Bindable]
-            private var srv:SecureRemoteObject = null;
-            [Bindable]
-            protected var mainController:MainController = new MainController(); 
-            [Bindable]
-            public var menuBarCollection:XMLListCollection;
-            [Bindable]
-            protected var menuItems:ArrayCollection;
-
-            private var menubarXML:XMLList =
-                <>
+	<!-- 
+	<control:MainController />
+ -->
+	<mx:VBox height="100%" width="100%" verticalGap="0" backgroundColor="#C2DAEF">
+		<mx:Canvas width="100%" height="66" backgroundImage="@Embed(source='assets/images/openwms_banner.jpg')" backgroundSize="100%">
+			<mx:Image source="@Embed('assets/images/openwms_header.png')" />
+		</mx:Canvas>
+		<mx:Canvas width="100%" height="25" backgroundImage="@Embed(source='assets/images/breadcrumbs.jpg')" backgroundSize="100%">
+			<mx:MenuBar id="mainMenuBar"  labelField="@label" itemClick="onMenuChange(event)" color="#00286e" fontWeight="bold" fontSize="12" alpha="0.0">
+            <mx:XMLList>
                     <menuitem label="Application">
                         <menuitem label="Connect ..." enabled="false" />
                         <menuitem label="Logout" enabled="false" />
@@ -95,182 +58,8 @@
                         <menuitem label="Module Management" action="{SwitchScreenEvent.SHOW_MODULE_MGMT_VIEW}" />
                         <menuitem label="Users" action="{SwitchScreenEvent.SHOW_USER_MGMT_VIEW}" />
                     </menuitem>
-            </>;
-            
-            // Manager classes are loaded to the application domain
-            private var moduleManager:ModuleManager; 
-            private var popUpManager:PopUpManager;
-            private var dragManager:DragManager;
-            private var mInfo:IModuleInfo
-            
-			public function init():void {
-                srv = new SecureRemoteObject("userService");
-                //srv.login();
-                menuBarCollection = new XMLListCollection(menubarXML);
-                registerEventListeners();
-                bindCommands();
-                detectModules();
-                //configService.send();
-			}
-			
-			private function bindCommands():void
-			{
-                mainController.addCommand(UserEvent.LOAD_ALL_USERS, LoadUsersCommand);
-                mainController.addCommand(UserEvent.ADD_USER, AddUserCommand);
-                mainController.addCommand(UserEvent.SAVE_USER, SaveUserCommand);
-                mainController.addCommand(UserEvent.DELETE_USER, DeleteUserCommand);
-
-                mainController.addCommand(SwitchScreenEvent.SHOW_STARTSCREEN, ShowStartscreenCommand);
-                mainController.addCommand(SwitchScreenEvent.SHOW_MODULE_MGMT_VIEW, ShowModuleManagementViewCommand);
-/*
-                mainController.addCommand(SwitchScreenEvent.SHOW_LOCATION_VIEW, ShowLocationViewCommand);
-                mainController.addCommand(SwitchScreenEvent.SHOW_LOCATIONGROUP_VIEW, ShowLocationGroupCommand);
-                mainController.addCommand(SwitchScreenEvent.SHOW_TRANSPORTUNIT_VIEW, ShowTransportUnitCommand);
-                mainController.addCommand(LoadLocationGroupsEvent.LOAD_ALL_LOCATION_GROUPS, LoadLocationGroupsCommand);
-                mainController.addCommand(LocationEvent.LOAD_ALL_LOCATIONS, LoadLocationsCommand);
-*/
-
-                mainController.addCommand(SwitchScreenEvent.SHOW_USER_MGMT_VIEW, ShowUserManagementViewCommand);
-
-                mainController.addCommand(ApplicationEvent.LOAD_ALL_MODULES, LoadModulesCommand);
-                mainController.addCommand(ApplicationEvent.SAVE_MODULE, SaveModuleCommand);
-                mainController.addCommand(ApplicationEvent.DELETE_MODULE, DeleteModuleCommand);
-			}
-			
-            public function onSecurityEvent(event:SecurityEvent):void {
-                trace("onSecurityEvent: " + event);
-                switch (event.type) {
-                case SecurityEvent.INVALID_CREDENTIALS:
-                    loginView.loginMessageText = "Invalid username or password";
-                    loginView.authenticated = false;
-                    break;
-                case SecurityEvent.NOT_LOGGED_IN:
-                    srv.logout();
-                    loginView.loginMessageText = "";
-                    loginView.authenticated = false;
-                    break;
-                case SecurityEvent.SESSION_EXPIRED:
-                    srv.logout();
-                    loginView.loginMessageText = "Session expired";
-                    loginView.authenticated = false;
-                    break;
-                case SecurityEvent.ACCESS_DENIED:
-                    Alert.show("You don't have required rights to execute this action");
-                    break;
-                }
-            }
-
-			private function onMenuChange(event:MenuEvent):void {
-				trace("Switching to view:"+event.item.@action);
-				new SwitchScreenEvent(event.item.@action).dispatch();
-			}
-			
-            public function login(username:String, password:String):void {
-                srv.setCredentials(username, password);
-                srv.login();
-            }
-
-            public function logout():void {
-                srv.logout();
-                loginView.authenticated = false;
-                loginView.loginMessageText = "";
-            }
-            
-            private function registerEventListeners():void {
-                var broker:EventBroker = EventBroker.getInstance();
-                broker.addEventListener(ApplicationEvent.MODULE_CONFIG_CHANGED, moduleConfigChanged);
-                // When all modules are loaded from DB then notify application to start modules automatically ...
-                broker.addEventListener(ModulesEvent.MODULES_LOADED, loadAllModules);
-            }
-            
-            /**
-             * In the case the Module confifuration has changed, a re-organize of menus and
-             * views becomes necessary.
-             */ 
-            private function moduleConfigChanged(event:ApplicationEvent):void {
-                // Modules were loaded, hence update viewStack, menuBar and popUps...
-                if (event.data != null && event.data is IApplicationModule) 
-                {
-                    var appModule:IApplicationModule = (event.data as IApplicationModule);
-                    trace("Configuration changed for Module:"+appModule.getModuleName());
-                    refreshMainMenu(appModule);
-                    refreshViewStack(appModule);
-                }
-            }
-            
-            /**
-             * This method rebuilds the viewStack of the application, and should be called,
-             * in case application modules are loaded or unloaded.
-             */
-            private function refreshViewStack(module:IApplicationModule):void
-            {
-                
-            }
-            
-            /**
-             * This method rebuilds the main application menu and should be called
-             * in case an application module is loaded or unloaded.
-             * The main menu, could be an MenuBar or any other kind of menu.
-             */
-            private function refreshMainMenu(module:IApplicationModule):void
-            {
-                trace("Resolve MenuItems to populate application menu...");
-                //menuItems = module.getMainMenuItems();
-                var map:HashMap = module.getMainMenuItems();
-                //for each (var m:Object in map) {
-                //    trace("m:"+m);
-                //}
-                trace("Map entry:"+map.get(0));
-                menubarXML.addAll(map.get(0));
-            }
-            
-            /**
-             * Load all modules that are configured to start automatically. This method is event triggered
-             * and called when the module configuration is loaded from the service layer.
-             */
-            public function loadAllModules(event:Event):void
-            {
-                for each (var module:Module in moduleLocator.allModules)
-                {
-                    if (module.loadOnStartup)
-                    {
-                        moduleLocator.loadModule(module);
-                    }
-                    else
-                    {
-                        trace("Module not configured to load on startup:" + module.moduleName);
-                    }
-                }
-                return;
-            }
-
-            private function updateViewStack(module:Module):void {
-                for each (var menuItem:MenuItem in module.menuItems)
-                {
-                    trace("MenuItem:"+menuItem.label);
-                }
-            }
-
-            private function detectModules():void {
-                new ApplicationEvent(ApplicationEvent.LOAD_ALL_MODULES).dispatch();
-            }
-            
-
-		]]>
-	</mx:Script>
-
-	<!-- Services -->
-	<business:Services />
-
-	<!-- 
-	<control:MainController />
- -->
-	<mx:VBox height="100%" width="100%" verticalGap="0" backgroundColor="#C2DAEF">
-		<mx:Canvas width="100%" height="66" backgroundImage="@Embed(source='assets/images/openwms_banner.jpg')" backgroundSize="100%">
-			<mx:Image source="@Embed('assets/images/openwms_header.png')" />
-		</mx:Canvas>
-		<mx:Canvas width="100%" height="25" backgroundImage="@Embed(source='assets/images/breadcrumbs.jpg')" backgroundSize="100%">
-			<mx:MenuBar id="mainMenuBar" dataProvider="{menuBarCollection}" labelField="@label" itemClick="onMenuChange(event)" color="#00286e" fontWeight="bold" fontSize="12" alpha="0.0">			</mx:MenuBar>
+            </mx:XMLList>
+			</mx:MenuBar>
 		</mx:Canvas>
 		<mx:HBox width="100%" height="100%" horizontalAlign="center" verticalAlign="middle">
 		<mx:ViewStack id="myViewStack" selectedIndex="{loginView.authenticated ? modelLocator.mainViewStackIndex : modelLocator.mainViewStackIndex}" width="100%" height="100%">
