--- a/org.openwms/trunk/source/org.openwms.common.flex.module/src/main/flex/org/openwms/web/flex/client/common/view/Main.mxml
+++ b/org.openwms/trunk/source/org.openwms.common.flex.module/src/main/flex/org/openwms/web/flex/client/common/view/Main.mxml
@@ -22,7 +22,7 @@
  */
 -->
 <module:CommonModule xmlns:mx="http://www.adobe.com/2006/mxml" xmlns:module="org.openwms.web.flex.client.module.*"
-    xmlns:view="org.openwms.web.flex.client.tms.view.*" layout="absolute" width="400" height="300" implements="org.openwms.web.flex.client.IApplicationModule">
+    xmlns:view="org.openwms.web.flex.client.common.view.*" layout="absolute" width="400" height="300" implements="org.openwms.web.flex.client.IApplicationModule">
 
     <mx:Script source="Runner.as" />
 
