--- a/org.openwms/trunk/source/org.openwms.tms.flex.module/src/main/flex/org/openwms/web/flex/client/tms/view/Main.mxml
+++ b/org.openwms/trunk/source/org.openwms.tms.flex.module/src/main/flex/org/openwms/web/flex/client/tms/view/Main.mxml
@@ -21,21 +21,17 @@
  * 02110-1301 USA, or see the FSF site: http://www.fsf.org.
  */
 -->
-<module:CommonModule xmlns:mx="http://www.adobe.com/2006/mxml" xmlns:module="org.openwms.web.flex.client.module.*"
-	xmlns:view="org.openwms.web.flex.client.tms.view.*" implements="org.openwms.web.flex.client.IApplicationModule">
-
-	<mx:Script source="Runner.as" />
+<view:Runner xmlns:mx="http://www.adobe.com/2006/mxml" xmlns:module="org.openwms.web.flex.client.module.*"
+	xmlns:view="org.openwms.web.flex.client.tms.view.*">
 
 	<mx:VBox height="100%" width="100%" verticalGap="0" backgroundColor="#C2DAEF">
-		<mx:Canvas width="100%" height="66" backgroundSize="100%">
-		</mx:Canvas>
 		<mx:Canvas width="100%" height="25" backgroundSize="100%">
 			<mx:MenuBar id="tmsMenuBar" labelField="@label">
 				<mx:XMLList>
 					<menuitem label="Transport Management">
 						<menuitem label="Transport Orders" enabled="true" />
 					</menuitem>
-					<menuitem label="Transport Order Management" targetPos="7">
+					<menuitem label="Transport Order Management" targetPos="2">
 						<menuitem label="Transport Orders" enabled="true" />
 					</menuitem>
 				</mx:XMLList>
@@ -43,10 +39,9 @@
 		</mx:Canvas>
 		<mx:HBox width="100%" height="100%" horizontalAlign="center" verticalAlign="middle">
 			<mx:ViewStack id="myViewStack" selectedIndex="{modelLocator.mainViewStackIndex}">
-				<view:TransportOrderView />
+				<view:TransportOrderView id="transportOrderView" />
 			</mx:ViewStack>
 		</mx:HBox>
 	</mx:VBox>
 
-
-</module:CommonModule>
+</view:Runner>
